--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 ---
 layout: home
 author_profile: true
+permalink: /
 ---
+# Hi, I'm Chenyuan Liu. 
+
+I’m an M.Eng student at the University of the Chinese Academy of Sciences, and I received my B.Eng degree from Central South University. My research interest include machine learning application and Emboddied AI. I am now looking forward to PhD and research cooperation opportunity, please feel free to contact me!
+
