--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ author_profile: true
 permalink: /
 classes: wide
 ---
+<h3>About</h3>
+
  Hi, I'm Chenyuan Liu. 
 
-I'm an M.Eng student at the University of the Chinese Academy of Sciences now, and I received my B.Eng degree from Central South University under the supervision of Prof. Heng Li. My research interest include machine learning application and Emboddied AI.
+I am currently pursuing my M.Eng degree at the University of the Chinese Academy of Sciences under the supervision of <a href="https://faculty.csu.edu.cn/liheng/zh_CN/index.htm" target="_blank">Prof. Heng Li</a>. I received my B.Eng degree from Central South University, also under Prof. Li's guidance. My research interests focus on machine learning applications and Embodied AI.
 
