Update supervisor information in index.html
Signed-off-by: David Liu <128695757+ChenyuanLiu92@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@ classes: wide
 
  Hi, I'm Chenyuan Liu. 
 
-I am currently pursuing my M.Eng degree at the University of the Chinese Academy of Sciences under the supervision of <a href="https://faculty.csu.edu.cn/liheng/zh_CN/index.htm" target="_blank">Prof. Heng Li</a>. I received my B.Eng degree from Central South University, also under Prof. Li's guidance. My research interests focus on machine learning applications and Embodied AI.
+I am currently pursuing my M.Eng degree at the University of the Chinese Academy of Sciences under the supervision of <a href="https://dirtyharrylyl.github.io/" target="_blank">Prof. Yong-Lu Li</a> and <a href="https://faculty.csu.edu.cn/liheng/zh_CN/index.htm" target="_blank">Prof. Heng Li</a>. I received my B.Eng degree from Central South University, also under Prof. Li's guidance. My research interests focus on machine learning applications and Embodied AI.
 
